forbid bean inheritance